# GalGenAi

./: .gitignore  AGENTS.md  README.md  pyproject.toml
notebooks/: diagnostic_plots.ipynb  lcfm_hsc.html  lcfm_hsc.ipynb  vae_example.ipynb  vae_hsc.ipynb  vae_hsc.py
scripts/: archive.py  compute_norm_stats.py  generate_fits_dataset.py  train_cnf_cosmos.py  train_dlcfm_cosmos.py  train_mnist.py  train_vae_lcfm_pipeline.py  verify_architecture.py
src/galgenai/: __init__.py  config.py  galgenai_config.yaml
src/galgenai/cosmos/: cosmos_catalog.py  simulate_galaxies.py
src/galgenai/cosmos/data/: test_catalog_30objects.fits
src/galgenai/cosmos/data/HSC_dataset30/: metadata.csv
src/galgenai/cosmos/data/HSC_dataset30/images/: galaxy_387552.fits  galaxy_530489.fits  galaxy_578261.fits  galaxy_631028.fits  galaxy_66480.fits  galaxy_670000.fits  galaxy_80446.fits  galaxy_83626.fits  galaxy_93737.fits
src/galgenai/data/: __init__.py  cosmos_dataset.py  hsc.py  latent.py  normalization.py
src/galgenai/models/: __init__.py  cnf.py  cnf_layers.py  layers.py  lcfm.py  vae.py
src/galgenai/training/: __init__.py  base_trainer.py  cnf_trainer.py  config.py  dlcfm_trainer.py  lcfm_trainer.py  schedules.py  trainer.py  utils.py  vae_trainer.py
src/galgenai/utils/: __init__.py  device.py
tests/: test_cosmos_sims.py  test_data.py  test_dlcfm.py  test_lcfm.py  test_schedules.py  test_vae.py  test_with_toy_catalog.py  vae_hsc.py  verify_architecture.py
