[project]
name = "galgenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Florian Kéruzoré", email = "fkeruzore@anl.gov" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[project.scripts]
galgenai = "galgenai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
