[project]
name = "galgenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Florian Kéruzoré", email = "fkeruzore@anl.gov" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[project.scripts]
galgenai = "galgenai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
investigate = [
    "jupytext>=1.18.1",
]

[project.optional-dependencies]
investigate = [
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "B", "W"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72  # For docstrings and comments

[tool.ruff.format]
docstring-code-format = true

